--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,17 @@
     "name": "lalu/jdr",
     "description": "A Laravel/Lumen package for structing API data response in JSON followed http://jsonapi.org/",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Thanh Taro",
-            "email": "adamnguyen.itdn@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "Thanh Taro",
+        "email": "adamnguyen.itdn@gmail.com"
+    }],
     "minimum-stability": "stable",
     "require": {
         "php": "~5.5|~7.0"
     },
     "require-dev": {
-      "phpunit/phpunit": "^4.8|^5.0",
+        "phpunit/phpunit": "^4.8|^5.0",
+        "phpunit/php-code-coverage": "^4",
         "graham-campbell/testbench": "^3.1",
         "art4/json-api-client": "*",
         "fzaninotto/faker": "~1.5"
