--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "phpunit/phpunit": "^4.8|^5.0",
         "graham-campbell/testbench": "^3.1",
         "art4/json-api-client": "*",
+        "laravel/lumen-framework": "5.2.*",
         "fzaninotto/faker": "~1.5"
     },
     "autoload": {
